syntax = "proto3";

option go_package = ".;subworkshop";

package demo.subworkshop;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

message Car {
  enum body {
    SEDAN = 0;
    PHAETON = 1;
    HATCHBACK = 2;
  }

  string number = 1;
  string owner = 2;
  body body_style = 3;
  string color = 4;
}

message SubPaintCarRequest{
  Car car = 1;
  string desired_color = 2;
  string callback_service_address = 3;
}

service SubWorkshop{
  rpc PaintCar(SubPaintCarRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/subworkshop/paint"
      body: "*"
    };
  }
}